[package]
name = "frappe"
version = "0.2.0"
authors = ["darkstalker <slayerbeast@gmail.com>"]
description = "FRP library for Rust"
documentation = "https://docs.rs/frappe"
repository = "https://github.com/darkstalker/frappe"
readme = "README.md"
keywords = ["frp", "reactive", "event", "stream"]
license = "MIT"

[features]

[dependencies]
maybe-owned = ">= 0.3.0"
either = { version = "1.1.0", optional = true }

[dev-dependencies]
rand = "0.3.16"
