[package]
name = "frappe"
version = "0.4.6"
authors = ["darkstalker <slayerbeast@gmail.com>"]
description = "Functional Reactive Programming library for Rust"
documentation = "https://docs.rs/frappe"
repository = "https://github.com/darkstalker/frappe"
readme = "README.md"
keywords = ["frp", "reactive", "event", "stream", "signal"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "darkstalker/frappe" }
maintenance = { status = "passively-maintained" }

[features]
default = ["either", "parking_lot", "crossbeam-utils", "lazycell"]
nightly = []

[dependencies]
maybe-owned = "0.3.0"
either = { version = "1.1.0", optional = true }
parking_lot = { version = "0.7.1", optional = true }
crossbeam-utils = { version = "0.6.3", optional = true }
lazycell = { version = "1.2.1", optional = true }

[dev-dependencies]
rand = "0.6.1"
bencher = "0.1.5"
futures = "0.3.5"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "first_order"
harness = false

[[bench]]
name = "second_order"
harness = false
